# caselaw-bulk-uploader-util

./: .env.example  README.md  jim.py  pyproject.toml
files/: README.md
script/: upload
